Fixed Image Stretching

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -416,7 +416,7 @@
                 margin: 0 0;
                 margin-right:1rem;
                 height: 5rem;
-                width: 4.4rem;
+                width: 4rem;
                 img{
                     height:100%;
                     width:100%;
